<resources>
    <string name="app_name">Friends Of Framers</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">REGISTER</string>
    <string name="NAME">ENTER YOUR NAME</string>
    <string name="EMAIL">ENTER YOUR EMAIL ID</string>
    <string name="PHONE_NUMBER">ENTER YOUR PHONE NUMBER</string>
    <string name="PERMANENT_ADDRESS">ENTER YOUR PERMANENT ADDRESS</string>
    <string name="CURRENT_ADDRESS">ENTER YOUR CURRENT ADDRESS</string>
    <string name="FARMER_RADIO">FARMER</string>
    <string name="CONSUMER_RADIO">CONSUMER</string>
    <string name="PASSWORD">ENTER YOUR PASSWORD</string>
    <string name="CONFIRM_PASSWORD">CONFIRM YOUR PASSWORD</string>
    <string name="REGISTER_AS">REGISTER AS</string>
    <string name="REGISTRATION_COMPLETE">REGISTRATION COMPLETED</string>
    <string name="CLEAR">CLEAR ALL FIELDS</string>
    <string name="already">Already A User?</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="skip">Already A User? LOGIN</string>

    <string name="connecting_farmer_s_and_user_s">Connecting Farmers and Users</string>
    <string name="buy_now">BUY NOW</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textView">FOR SELECTED CROP</string>
    <string name="textView2">Enter Quantity (kg) :</string>
    <string name="editText">PROCEED TO CHECKOUT</string>
    <string name="radioButton">High</string>
    <string name="radioButton2">Moderate</string>
    <string name="radioButton3">Low</string>

    <string-array name="search_crops">

        <item>Paddy</item>
        <item>Wheat</item>
        <item>Maize</item>
        <item>Potato</item>
        <item>Dal</item>
        <item>Carrot</item>
        <item>Gram</item>
        <item>Onion</item>
        <item>Sugarcane</item>
        <item>Tomato</item>
        <item>Chilly</item>
        <item>Spinach</item>
        <item>Brinjal</item>
        <item>Peas</item>
        <item>Cauliflower</item>
        <item>Millet</item>
        <item>Pulse</item>
        <item>Mustard</item>


    </string-array>

</resources>
